# swagger.yml
@@ -3,473 +3,130 @@ info:
   title: HPC Service V3
   version: 3.0.0
 paths:
-  /rest/all-participants:
+  /rest/all-plans:
     get:
-      operationId: allParticipantsQuery
+      operationId: allPlansQuery
       parameters:
         - in: query
-          name: email
+          name: year
           required: false
-          schema:
-            type: string
-      responses:
-        '200':
-          description: Get all the participants
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Participant'
-  /rest/get-assignment:
-    get:
-      operationId: getAssignmentQuery
-      parameters:
-        - in: query
-          name: assignmentId
-          required: true
           schema:
             type: number
             format: float
       responses:
         '200':
-          description: Get A particular reporting window assignment
+          description: Get all the plans
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ReportingWindowAssignment'
-  /rest/update-assignment:
-    post:
-      operationId: updateAssignmentMutation
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                body:
-                  $ref: '#/components/schemas/UpdateAssignmentInput'
-                assignmentId:
-                  type: number
-                  format: float
-              required:
-                - body
-                - assignmentId
-      responses:
-        '200':
-          description: Get all the reporting window assignments
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ReportingWindowAssignment'
-  /rest/upload-assignment-file:
-    post:
-      operationId: uploadAssignmentFileMutation
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                fileHash:
-                  type: string
-                file:
-                  $ref: '#/components/schemas/Upload'
-                assignmentId:
-                  type: number
-                  format: float
-              required:
-                - fileHash
-                - file
-                - assignmentId
-      responses:
-        '200':
-          description: Get all the reporting window assignments
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/FileRecord'
+                type: array
+                items:
+                  $ref: '#/components/schemas/Plan'
 components:
   schemas:
     Query:
       type: object
       required:
-        - allParticipants
-        - getAssignment
+        - allPlans
       properties:
-        allParticipants:
+        allPlans:
           type: array
           items:
-            $ref: '#/components/schemas/Participant'
-          description: Get all the participants
-        getAssignment:
-          $ref: '#/components/schemas/ReportingWindowAssignment'
-          description: Get A particular reporting window assignment
-    Participant:
-      type: object
-      required:
-        - id
-        - hidId
-        - email
-        - name_given
-        - name_family
-      properties:
-        id:
-          type: string
-        hidId:
-          type: string
-          description: The HID ID of the user
-        email:
-          type: string
-          description: The email of the user
-        name_given:
-          type: string
-          description: The Name given to the user
-        name_family:
-          type: string
-          description: The name of the family of users to which the user belongs to
-        participantOrganizations:
-          type: array
-          items:
-            $ref: '#/components/schemas/participantOrganization'
-          description: Relationship table between participants and organizations
-        organizations:
-          type: array
-          items:
-            $ref: '#/components/schemas/Organization'
-          description: The organizations to which the participant belongs to
-        participantCountry:
-          type: array
-          items:
-            $ref: '#/components/schemas/participantCountry'
-          description: Relationship table between participants and locations
-        locations:
-          type: array
-          items:
-            $ref: '#/components/schemas/Location'
-          description: The locations associated with the participant
-    participantOrganization:
-      type: object
-      required:
-        - id
-        - validated
-        - participant
-        - organization
-      properties:
-        id:
-          type: string
-        validated:
-          type: boolean
-          description: indicates when this was last validated on
-        participant:
-          $ref: '#/components/schemas/Participant'
-          description: participant involved in the relationship
-        organization:
-          $ref: '#/components/schemas/Organization'
-          description: Organization involved in the relationship
-    Organization:
+            $ref: '#/components/schemas/Plan'
+          description: Get all the plans
+    Plan:
       type: object
       required:
         - id
         - name
-        - abbreviation
-        - verified
-        - active
-        - collectiveInd
-        - organizationParticipants
-        - participants
+        - year
+        - fundingRequirements
+        - funding
+        - clusters
+        - caseloads
       properties:
         id:
           type: string
         name:
           type: string
-          description: Name of the organization
-        nativeName:
-          type: string
-          description: The native name given to the organization
-        abbreviation:
-          type: string
-          description: The abbrevation given to the organization
-        url:
-          type: string
-          description: The URL of the organization
-        comments:
-          type: string
-          description: The comments made on the organization
-        verified:
-          type: boolean
-          description: Is the organization verified
-        notes:
-          type: string
-          description: The notes on the organization
-        active:
-          type: boolean
-          description: Is the organization active
-        collectiveInd:
-          type: boolean
-          description: The collectiveind?
-        newOrganization:
-          $ref: '#/components/schemas/Organization'
-          description: New organization?
-        children:
+        year:
+          type: number
+          format: float
+        fundingRequirements:
+          $ref: '#/components/schemas/PlanFunding'
+        funding:
+          $ref: '#/components/schemas/PlanFunding'
+        clusters:
           type: array
           items:
-            $ref: '#/components/schemas/Organization'
-          description: The children of the organization
-        parent:
-          $ref: '#/components/schemas/Organization'
-          description: The parent organization
-        organizationParticipants:
+            $ref: '#/components/schemas/PlanCluster'
+        caseloads:
           type: array
           items:
-            $ref: '#/components/schemas/participantOrganization'
-          description: relationship table between participants and organizations
-        participants:
-          type: array
-          items:
-            $ref: '#/components/schemas/Participant'
-          description: the participants associated with the organization
-    participantCountry:
+            $ref: '#/components/schemas/PlanCaseload'
+    PlanFunding:
       type: object
       required:
-        - id
-        - validated
-        - participant
-        - location
+        - amountUSD
+        - breakdown
       properties:
-        id:
-          type: string
-        validated:
-          type: boolean
-          description: indicates when this was last validated on
-        participant:
-          $ref: '#/components/schemas/Participant'
-          description: participant involved in the relationship
-        location:
-          $ref: '#/components/schemas/Location'
-          description: location involved in the relationship
-    Location:
+        amountUSD:
+          type: number
+          format: float
+        breakdown:
+          $ref: '#/components/schemas/PlanFundingBreakdown'
+    PlanFundingBreakdown:
+      type: object
+      properties:
+        byCluster:
+          type: array
+          items:
+            $ref: '#/components/schemas/PlanFundingBreakdownCluster'
+    PlanFundingBreakdownCluster:
+      type: object
+      required:
+        - amountUSD
+        - cluster
+      properties:
+        amountUSD:
+          type: number
+          format: float
+        cluster:
+          $ref: '#/components/schemas/PlanCluster'
+    PlanCluster:
       type: object
       required:
         - id
-        - externalId
         - name
-        - adminLevel
-        - latitude
-        - longitude
-        - iso3
-        - pcode
-        - validOn
-        - status
-        - itosSync
-        - locationParticipants
-        - participants
       properties:
         id:
           type: string
-        externalId:
-          type: string
-          description: external ID
         name:
           type: string
-          description: The name of the location
-        adminLevel:
-          type: number
-          format: float
-          description: The admin level of the location
-        latitude:
-          type: number
-          format: float
-          description: latitude of the location
-        longitude:
-          type: number
-          format: float
-          description: longitude of the location
-        iso3:
-          type: string
-          description: ISO3
-        pcode:
-          type: string
-          description: PCODE
-        validOn:
-          type: number
-          format: float
-          description: validon
-        status:
-          type: string
-          description: status
-        itosSync:
-          type: boolean
-          description: itosSync
-        locationParticipants:
-          type: array
-          items:
-            $ref: '#/components/schemas/participantCountry'
-          description: Relationship table between participants and locations
-        participants:
-          $ref: '#/components/schemas/Participant'
-          description: Participants in the location
-    ReportingWindowAssignment:
+    PlanCaseload:
       type: object
       required:
         - id
-        - assigneeType
-        - assigneeId
-        - assigneeOperation
-        - reportingWindowId
-        - reportingWindow
-        - versionModelInstance
-      properties:
-        id:
-          type: string
-        assigneeType:
-          type: string
-          description: The type of assignee for the reporting window assignment
-        assigneeId:
-          type: number
-          format: float
-          description: The ID of the assignee to which the assignment belongs to
-        assigneeOperation:
-          type: number
-          format: float
-          description: assignee operation
-        reportingWindowId:
-          type: number
-          format: float
-          description: ID of the reporting window the assignment belongs to
-        reportingWindow:
-          $ref: '#/components/schemas/ReportingWindow'
-          description: reporting window to which the assignment belongs to
-        versionModelInstance:
-          $ref: '#/components/schemas/ReportingWindowAssignmentVersion'
-          description: >-
-            Instance of the currently active version of the reporting window
-            assignment
-    ReportingWindow:
-      type: object
-      required:
-        - id
-        - belongsToType
-        - assignments
-        - versionModelInstance
-      properties:
-        id:
-          type: string
-        belongsToType:
-          type: string
-          description: The type of the entity to which the reporting window belongs to
-        belongsToId:
-          type: number
-          format: float
-          description: The ID of the entity to which the window belongs to
-        assignments:
-          type: array
-          items:
-            $ref: '#/components/schemas/ReportingWindowAssignment'
-          description: assignments that belong to the reporting window
-        versionModelInstance:
-          $ref: '#/components/schemas/ReportingWindowVersion'
-          description: Instance of the currently active version of the reporting window
-    ReportingWindowVersion:
-      type: object
-      properties:
-        rootInst:
-          $ref: '#/components/schemas/ReportingWindow'
-    ReportingWindowAssignmentVersion:
-      type: object
-      properties:
-        rootInst:
-          $ref: '#/components/schemas/ReportingWindowAssignment'
-    Mutation:
-      type: object
-      required:
-        - updateAssignment
-        - uploadAssignmentFile
-      properties:
-        updateAssignment:
-          $ref: '#/components/schemas/ReportingWindowAssignment'
-          description: Get all the reporting window assignments
-        uploadAssignmentFile:
-          $ref: '#/components/schemas/FileRecord'
-          description: Get all the reporting window assignments
-    UpdateAssignmentInput:
-      type: object
-      required:
-        - previousVersion
-        - form
-      properties:
-        previousVersion:
-          type: number
-          format: float
-          description: The Previous Version of the assignment
-        form:
-          type: object
-          description: Form Input
-      description: The input fields for a package address
-    UpdateAssignmentInputForm:
-      type: object
-      required:
-        - data
-        - finalized
-        - files
-      properties:
-        data:
-          type: string
-          description: data to be entered
-        finalized:
-          type: boolean
-          description: is it finalized?
-        files:
-          type: array
-          items:
-            type: object
-          description: List of file objects to be used as input in the form
-      description: FormInput for update Assignment
-    FileObject:
-      type: object
-      required:
         - name
-        - data
       properties:
+        id:
+          type: string
         name:
           type: string
-          description: Name of the file
-        data:
-          type: object
-          description: The data representing the file content
-      description: Object representing a file
-    FileData:
-      type: object
-      required:
-        - fileHash
-      properties:
-        fileHash:
-          type: string
-          description: hash of the file
-      description: Data representing the file content
-    FileRecord:
-      type: object
-      required:
-        - namespace
-        - hash
-        - createdAt
-        - updatedAt
-      properties:
-        namespace:
-          type: string
-          description: Namespace to which the file belongs to
-        hash:
-          type: string
-          description: Hash of the file
-        fileType:
-          type: string
-          description: type of the file
-        metadata:
-          type: object
-          description: metadata of the file
-        createdAt:
-          type: object
-          description: date at which the file was created at
-        updatedAt:
-          type: object
-          description: date at which the file was last updated at
+        population:
+          type: number
+          format: float
+        affected:
+          type: number
+          format: float
+          description: How many people are affected by the humanitarian crisis
+        inNeed:
+          type: number
+          format: float
+        targeted:
+          type: number
+          format: float
+          description: How many people does this plan aim to target
+        expectedReach:
+          type: number
+          format: float
